<resources>
    <string name="app_name">What to sale</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="not_a_member_sign_up">Not a member? Sign up!</string>
    <string name="Enter_password">Enter password</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="Register_me">Register me</string>
    <string name="have_an_account_log_in">Have an account? Log in!</string>
    <string name="Name">Name</string>
    <string name="to_do">TODO</string>
    <string name="textview">TextView</string>
    <string name="notifications">Notifications</string>
    <string name="help_to_find">Help to find</string>
    <string name="product_name">Product name</string>
</resources>
