<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:hint="@string/Login"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:autofillHints=""
            android:layout_marginStart="100dp"
            android:paddingStart="5dp" tools:targetApi="o"/>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="100dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_marginStart="100dp" tools:targetApi="o"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="150dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/log_in"
            android:textColor="#FFFFFF" tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginStart="120dp"
            android:background="@null"
            android:stateListAnimator="@null"
            android:text="@string/not_a_member_sign_up"
            android:textAllCaps="false"
            android:textColor="#215CF3" tools:targetApi="lollipop" />

    </GridLayout>