<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="160dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:text="@string/Name"
                android:autofillHints=""
                android:layout_marginStart="100dp"
                android:paddingStart="5dp" tools:targetApi="o"/>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="100dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:text="@string/Login"
                android:autofillHints=""
                android:layout_marginStart="100dp"
                android:paddingStart="5dp" tools:targetApi="o"/>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginLeft="100dp"
                android:ems="10"
                android:hint="@string/Enter_password"
                android:inputType="textPassword"
                android:layout_marginStart="100dp"
                android:autofillHints="" tools:targetApi="o"/>

            <EditText
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_marginLeft="100dp"
                android:ems="10"
                android:hint="@string/Repeat_password"
                android:inputType="textPassword"
                android:autofillHints=""
                android:layout_marginStart="100dp" tools:targetApi="o"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp">


                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_marginStart="150dp"
                android:backgroundTint="#00BCD4"
                android:text="@string/Register_me"
                android:textColor="#FFFFFF" tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="9"
                android:layout_column="0"
                android:layout_marginStart="130dp"
                android:background="@null"
                android:stateListAnimator="@null"
                android:text="@string/have_an_account_log_in"
                android:textAllCaps="false"
                android:textColor="#215CF3" tools:targetApi="lollipop" />

        </GridLayout>
    </ScrollView>


</RelativeLayout>