<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".HomePageFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/help_to_find"
            android:textSize="18sp"
            tools:text="Help to find"
            android:layout_marginStart="10dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_row="1"
            android:layout_column="0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do"/>

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton10"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0">

            <TextView
                android:id="@+id/Notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp"
                android:text="@string/notifications"
                android:textSize="24sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/RecentlyViewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/textview"
            android:textSize="18sp"
            tools:text="Recently viewed"
            android:layout_marginStart="10dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_row="4"
            android:layout_column="0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorAccent">

                <ImageButton
                    android:id="@+id/imageButton20"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton21"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton22"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton23"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton24"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton25"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton26"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton27"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton28"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />

                <ImageButton
                    android:id="@+id/imageButton29"
                    android:layout_width="148dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/btn_star"
                    android:contentDescription="@string/to_do" />
            </LinearLayout>
        </HorizontalScrollView>






    </GridLayout>

</FrameLayout>
